Se modifico la imagen Banner logo header

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <div class="container">
         <div class="row">
           <div class="col  content-info">
+            <div class="content-img"><img src="./img/banner-milton-code.png" alt="Banner milton code logo"/></div>
             <div class="content-data">
               <p class="content-data__subtitle">Hola, mi nombre es</p>
               <h1 class="content-data__title">&lt;MILTON CODE /&gt;</h1>
