Se agrego: Libreria jQuerie Plugins ShuffeLetters Texto h1.title animado

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="content-img"><img src="./img/banner-milton-code.png" alt="Banner milton code logo"/></div>
             <div class="content-data">
               <p class="content-data__subtitle">Hola, mi nombre es</p>
-              <h1 class="content-data__title">&lt;MILTON CODE /&gt;</h1>
+              <h1 class="content-data__title" id="animated-text">&lt;MILTON CODE /&gt;</h1>
               <p class="content-data__subtitle">Soy Programador y Diseñador web</p>
             </div>
             <div class="content-social"><a class="content-social__link" href="https://twitter.com/MiltonCode" target="_blank">
@@ -222,7 +222,10 @@
         </div>
       </div>
     </footer>
+    <script src="js/lib/jquery-3.4.1.min.js"></script>
+    <script src="js/plugins/jquery.shuffleLetters.js"></script>
+    <script src="js/modules/animated_text.js"></script>
+    <script src="js/lib/materialize.min.js"></script>
     <script src="js/scripts.js"></script>
-    <script src="js/materialize.min.js"></script>
   </body>
 </html>
